change variance calculations + optimization fixes

--- a/templates/custom_funnel.html
+++ b/templates/custom_funnel.html
@@ -1,5 +1,7 @@
 {# table.html.j2 #}
-<h2>{{ funnel_name }}</h2>
+<p class="auto-cursor-target">
+<strong>{{ funnel_name }}</strong>
+</p>
 <table class="wrapped confluenceTable">
   <thead>
     <tr>
