more random updates

--- a/templates/design_vs_reality.html
+++ b/templates/design_vs_reality.html
@@ -102,13 +102,17 @@
             </td>
             <td colspan="{{branches|length }}" style="text-align:right">
             {% set ab_ok = true %}
-            {% for br in branches[1:] %}
-                {% set diff = (platform.experiment.samples[br] - platform.experiment.samples[branches[0]]) * 100
-                            / platform.experiment.samples[branches[0]] %}
-                {% if diff > 5 or diff < -5 %}
+            {% if platform.experiment.samples[branches[0]] == 0 %}
                 {% set ab_ok = false %}
-                {% endif %}
-            {% endfor %}
+            {% else %}
+                {% for br in branches[1:] %}
+                    {% set diff = (platform.experiment.samples[br] - platform.experiment.samples[branches[0]]) * 100
+                                / platform.experiment.samples[branches[0]] %}
+                    {% if diff > 5 or diff < -5 %}
+                    {% set ab_ok = false %}
+                    {% endif %}
+                {% endfor %}
+            {% endif %}
             <ac:task-list>
                 <ac:task>
                     <ac:task-id>{{ random_guid() }}</ac:task-id>
